# splash

./: .envrc.example  .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md
script/: encrypt.sh
src/: main.rs
static/: twitter_access_key  twitter_access_secret  twitter_consumer_key  twitter_consumer_secret
