[package]
name = "nijisanji-twitter-list"
version = "0.1.0"
authors = ["shuymn <mail@shuymn.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
lambda_runtime = "0.2.1"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
tokio = "0.2.22"
egg-mode = "0.15.0"
rusoto_core = "0.45.0"
rusoto_kms = "0.45.0"
rusoto_sts = "0.45.0"
bytes = "0.5.6"
